examples/guestbook/envs/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-frontend
  annotations:
    # kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-http01-staging # letsencrypt-http01-prod 
spec:
  ingressClassName: public
  tls:
  - hosts:
    - &host guestbook.freddieentity.link
    secretName: guestbook-freddieentity-link-key-pair
  rules:
  - host: *host 
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend
            port:
              number: 80
